@@ -1,7 +1,7 @@
 /*
 Theme Name: MyKnowledgeBase
 Theme URI: https://www.guido.site/themes
-Version: 6.7
+Version: 6.8
 Requires PHP: 5.6
 Requires at least: 5.2
 Tested up to: 5.5
